# SettingsMgr

./: CMakeLists.txt  README  Settings.c
